<resources>
    <string name="app_name">KKNotes BSCCS</string>
    <string name="log_in">Log In</string>
    <string name="made_by_kunal_kavathekar">Made By KUNAL KAVATHEKAR</string>
    <string name="sign_up">Sign Up</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="privacy_policy_fragment_title">Privacy Policy:</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="please_fill_the_details_and_create_a_account">Please fill the details and create a account</string>
    <string name="sign_up_btn_txt">Sign Up</string>
    <string name="password_must_contain_at_least_6_characters">password must contain at least 6 characters</string>
</resources>