<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpPage">

    <View
        android:id="@+id/kk_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:background="@drawable/kk_logo_shape" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scrollbarThumbVertical="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sign_up_now"
                android:layout_width="166dp"
                android:layout_height="52.6dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/koho_bold"
                android:shadowColor="#000000"
                android:shadowDx="1.5"
                android:shadowDy="1.5"
                android:shadowRadius="1.6"
                android:text="@string/sign_up_now"
                android:textColor="#FE4B66"
                android:textSize="28sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/fillDetailsText"
                android:layout_width="334dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:fontFamily="@font/koho"
                android:gravity="center"
                android:text="@string/please_fill_the_details_and_create_a_account"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <View
                android:id="@+id/username_view"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/usernametextfield" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="-60dp"
                android:ems="10"
                android:hint="Username"
                android:textSize="18sp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#474646" />

            <View
                android:id="@+id/email_view"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/usernametextfield" />

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="-60dp"
                android:ems="10"
                android:hint="Email"
                android:textSize="18sp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textColorHint="#474646" />


            <View
                android:id="@+id/password_view"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:background="@drawable/usernametextfield" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/materalPasswordTextField"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="-60dp"
                app:hintEnabled="false">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="280dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-60dp"
                    android:ems="10"
                    android:textSize="18sp"
                    android:hint="Password"
                    android:drawableStart="@drawable/ic_baseline_key_24"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textColorHint="#474646" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/confirm_password_view"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/usernametextfield" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/materalPasswordTextField2"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="-60dp"
                app:hintEnabled="false">
                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="280dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-60dp"
                    android:ems="10"
                    android:hint="Confirm Password"
                    android:textSize="18sp"
                    android:drawableStart="@drawable/ic_baseline_key_24"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textColorHint="#474646" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/password_must_contain_at_least_6_characters"
                android:fontFamily="@font/koho"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/signupButton"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundstyle"
                android:onClick="SignUpClick"
                android:shadowColor="#000000"
                android:shadowDx="4.5"
                android:shadowDy="4.5"
                android:shadowRadius="1.6"
                android:text="@string/sign_up_btn_txt"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alreadyHaveAccountLogIn"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/koho"
                android:textColor="#191919"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/logInNowTextColor"
                android:layout_centerInParent="false"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
